import { snapshotTest } from 'testing';

describe('Switch demo snapshot', () => {
  snapshotTest('Switch');
});
