// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Switch demo snapshot > Switch demo snapshot 0 1`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap;"
  >
    <div
      class="bui-switch bui-switch-medium bui-switch-primary"
    >
      <input
        class="bui-switch-input"
        type="checkbox"
      />
    </div>
  </div>
</div>
`;

exports[`Switch demo snapshot > Switch demo snapshot 0 2`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 5px; --flex-wrap: nowrap;"
  >
    <div
      class="bui-switch bui-switch-medium bui-switch-primary"
    >
      <input
        class="bui-switch-input"
        type="checkbox"
      />
    </div>
    <div
      class="bui-switch bui-switch-medium bui-switch-info"
    >
      <input
        class="bui-switch-input"
        type="checkbox"
      />
    </div>
    <div
      class="bui-switch bui-switch-medium bui-switch-success"
    >
      <input
        class="bui-switch-input"
        type="checkbox"
      />
    </div>
    <div
      class="bui-switch bui-switch-medium bui-switch-warning"
    >
      <input
        class="bui-switch-input"
        type="checkbox"
      />
    </div>
    <div
      class="bui-switch bui-switch-medium bui-switch-danger"
    >
      <input
        class="bui-switch-input"
        type="checkbox"
      />
    </div>
  </div>
</div>
`;

exports[`Switch demo snapshot > Switch demo snapshot 0 3`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: row; --spacing: 10px; --flex-wrap: nowrap;"
  >
    <div
      class="bui-switch bui-switch-small bui-switch-primary"
    >
      <input
        class="bui-switch-input"
        type="checkbox"
      />
    </div>
    <div
      class="bui-switch bui-switch-medium bui-switch-primary"
    >
      <input
        class="bui-switch-input"
        type="checkbox"
      />
    </div>
    <div
      class="bui-switch bui-switch-large bui-switch-primary"
    >
      <input
        class="bui-switch-input"
        type="checkbox"
      />
    </div>
  </div>
</div>
`;

exports[`Switch demo snapshot > Switch demo snapshot 0 4`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: row; --spacing: 10px; --flex-wrap: nowrap;"
  >
    <div
      class="bui-switch bui-switch-medium bui-switch-primary"
    >
      <input
        class="bui-switch-input"
        type="checkbox"
      />
      <span
        class="bui-switch-inner"
      >
        关
      </span>
    </div>
    <div
      class="bui-switch bui-switch-medium bui-switch-primary"
    >
      <input
        class="bui-switch-input"
        type="checkbox"
      />
      <span
        class="bui-switch-inner"
      >
        <svg
          class="bui-svg-icon"
          color="#fff"
          focusable="false"
          viewBox="0 0 96 96"
        >
          <path
            d="m75.3 70.6 1.8 1.8c1.2 1.2 1.2 3.1 0 4.2-1.2 1.2-3.1 1.2-4.2 0l-1.8-1.8c-1.2-1.2-1.2-3.1 0-4.2 1.1-1.2 3-1.2 4.2 0zm-49.9 0c1.2 1.2 1.2 3.1 0 4.2l-1.8 1.8c-1.2 1.2-3.1 1.2-4.2 0-1.2-1.2-1.2-3.1 0-4.2l1.8-1.8c1.2-1.2 3.1-1.2 4.2 0zM47.8 20c15.5 0 28 12.5 28 28s-12.5 28-28 28-28-12.5-28-28 12.5-28 28-28zm0 6c-12.2 0-22 9.8-22 22s9.8 22 22 22 22-9.8 22-22-9.9-22-22-22zM24 19.2l1.8 1.8c1.2 1.2 1.2 3.1 0 4.2-1.2 1.2-3.1 1.2-4.2 0l-1.8-1.8c-1.2-1.2-1.2-3.1 0-4.2 1.1-1.1 3-1.1 4.2 0zm52.8 0c1.2 1.2 1.2 3.1 0 4.2L75 25.2c-1.2 1.2-3.1 1.2-4.2 0-1.2-1.2-1.2-3.1 0-4.2l1.8-1.8c1.1-1.1 3-1.1 4.2 0zM48.2 5c1.7 0 3 1.3 3 3v5c0 1.7-1.3 3-3 3s-3-1.3-3-3V8c0-1.7 1.4-3 3-3zM91 47.8c0 1.7-1.3 3-3 3h-5c-1.7 0-3-1.3-3-3s1.3-3 3-3h5c1.7 0 3 1.3 3 3zm-75 0c0 1.7-1.3 3-3 3H8c-1.7 0-3-1.3-3-3s1.3-3 3-3h5c1.7 0 3 1.3 3 3zM48.2 80c1.7 0 3 1.3 3 3v5c0 1.7-1.3 3-3 3s-3-1.3-3-3v-5c0-1.7 1.4-3 3-3z"
          />
        </svg>
      </span>
    </div>
    <div
      class="bui-switch bui-switch-large bui-switch-primary"
    >
      <input
        class="bui-switch-input"
        type="checkbox"
      />
      <span
        class="bui-switch-inner"
      >
        <svg
          class="bui-svg-icon"
          color="#fff"
          focusable="false"
          viewBox="0 0 96 96"
        >
          <path
            d="m75.3 70.6 1.8 1.8c1.2 1.2 1.2 3.1 0 4.2-1.2 1.2-3.1 1.2-4.2 0l-1.8-1.8c-1.2-1.2-1.2-3.1 0-4.2 1.1-1.2 3-1.2 4.2 0zm-49.9 0c1.2 1.2 1.2 3.1 0 4.2l-1.8 1.8c-1.2 1.2-3.1 1.2-4.2 0-1.2-1.2-1.2-3.1 0-4.2l1.8-1.8c1.2-1.2 3.1-1.2 4.2 0zM47.8 20c15.5 0 28 12.5 28 28s-12.5 28-28 28-28-12.5-28-28 12.5-28 28-28zm0 6c-12.2 0-22 9.8-22 22s9.8 22 22 22 22-9.8 22-22-9.9-22-22-22zM24 19.2l1.8 1.8c1.2 1.2 1.2 3.1 0 4.2-1.2 1.2-3.1 1.2-4.2 0l-1.8-1.8c-1.2-1.2-1.2-3.1 0-4.2 1.1-1.1 3-1.1 4.2 0zm52.8 0c1.2 1.2 1.2 3.1 0 4.2L75 25.2c-1.2 1.2-3.1 1.2-4.2 0-1.2-1.2-1.2-3.1 0-4.2l1.8-1.8c1.1-1.1 3-1.1 4.2 0zM48.2 5c1.7 0 3 1.3 3 3v5c0 1.7-1.3 3-3 3s-3-1.3-3-3V8c0-1.7 1.4-3 3-3zM91 47.8c0 1.7-1.3 3-3 3h-5c-1.7 0-3-1.3-3-3s1.3-3 3-3h5c1.7 0 3 1.3 3 3zm-75 0c0 1.7-1.3 3-3 3H8c-1.7 0-3-1.3-3-3s1.3-3 3-3h5c1.7 0 3 1.3 3 3zM48.2 80c1.7 0 3 1.3 3 3v5c0 1.7-1.3 3-3 3s-3-1.3-3-3v-5c0-1.7 1.4-3 3-3z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Switch demo snapshot > Switch demo snapshot 0 5`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap;"
  >
    <div
      class="bui-switch bui-switch-medium bui-switch-primary bui-switch-checked"
    >
      <input
        checked=""
        class="bui-switch-input"
        type="checkbox"
      />
    </div>
  </div>
</div>
`;

exports[`Switch demo snapshot > Switch demo snapshot 0 6`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap;"
  >
    <div
      class="bui-switch bui-switch-medium bui-switch-primary bui-switch-checked"
    >
      <input
        checked=""
        class="bui-switch-input my-input"
        type="checkbox"
      />
    </div>
  </div>
</div>
`;

exports[`Switch demo snapshot > Switch demo snapshot 0 7`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 5px; --flex-wrap: nowrap;"
  >
    <div
      class="bui-switch bui-switch-medium bui-switch-primary bui-switch-disabled"
    >
      <input
        aria-disabled="true"
        class="bui-switch-input"
        disabled=""
        type="checkbox"
      />
    </div>
    <div
      class="bui-switch bui-switch-medium bui-switch-primary bui-switch-disabled"
    >
      <input
        aria-disabled="true"
        class="bui-switch-input"
        disabled=""
        type="checkbox"
      />
    </div>
  </div>
</div>
`;
